Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.


  Trunk (unreleased)

    Restructuring

      - Replaced  imports from the 'Globals' module throughout the 
        tree with imports from the actual modules;  the 'Globals' module
        was always intended to be an area for shared data, rather than
        a "facade" for imports.  Added zope.deferred.deprecation entries
        to 'Globals' for all symbols / modules previously imported directly.

      - Updated 'pytz' from '2007f' to '2008i'.

      - Moved svn:externals for 'mechanize', 'ClientPath', and 'pytz' to
        versions managed outside the Zope3 trunk.

      - Protect against non-existing zope.conf path and products directories.
        This makes it possible to run a Zope instance without a Products or
        lib/python directory.

      - updated to ZODB 3.8.1

      - Moved exception MountedStorageError from ZODB.POSExceptions
        to Products.TemporaryFolder.mount (now its only client).

      - LP #253362:  Moved Zope2-specific module, ZODB/Mount.py, to
        Products/TemporaryFolder/mount.py (its only client is
        Products/TemporaryFolder/TemporaryFolder.py).

      - Removed spurious import-time dependencies from
        Products/ZODBMountPoint/MountedObject.py.

      - Removed Examples.zexp from the skeleton. The TTW shopping cart isn't
        any good example of Zope usage anymore.

      - Removed deprecated ZTUtil.Iterator module

      - Removed deprecated StructuredText module

      - Removed deprecated TAL module

      - Removed deprecated modules from Products.PageTemplates.

      - Removed deprecated ZCML directives from Five including the whole
        Five.site subpackage.

      - Turned deprecation warnings for manage_afterAdd, manage_beforeDelete
        and manage_afterClone methods into discouraged warnings. These methods