@@ -21,7 +21,7 @@ Allowing Import of Modules
 
       from Products.PythonScripts.Utility import allow_module, allow_class
       from AccessControl import ModuleSecurityInfo, ClassSecurityInfo
-      from Globals import InitializeClass
+      from App.class_init import InitializeClass
 
     4. For each module to which you want to allow access, add
        security declarations in '__init__.py'.
